Removed cold start, extended log, log all unique CPU families

--- a/benchmarks/experiments/wrapper_overhead/run.ipynb
+++ b/benchmarks/experiments/wrapper_overhead/run.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,14 +33,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "region = 'ca-west-1'\n",
     "run_utility: WrapperOverheadRunUtility = WrapperOverheadRunUtility(region)\n",
     "\n",
-    "times = 1\n",
+    "batch_sizes = 1\n",
     "batchs = 1"
    ]
   },
@@ -71,233 +71,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Run 1/1 Batch 1/10\n",
-      "Running aws_step_function workload: wo-dna_vis-ed-step_function\n",
-      "Payload: {'gen_file_name': 'small_sequence.gb', 'metadata': {'workload_name': 'wo-dna_vis-ed-multi_x-0.0.3', 'experiment_type': 'multi_x', 'request_id': '56e42eb3-570c-4a65-9739-32ecfa0443ff', 'start_time': '2024-03-29 04:30:41,176411+0000'}}\n",
-      "Times: 1\n",
-      "Done\n",
-      "\n",
-      "Running boto3_direct workload: wo-dna_vis-ed-direct\n",
-      "Payload: {'gen_file_name': 'small_sequence.gb', 'metadata': {'workload_name': 'wo-dna_vis-ed-step_function', 'experiment_type': 'aws_step_function', 'request_id': '7dd83817-8d6d-405e-bb43-f30c1b99d837', 'start_time': '2024-03-29 04:36:12,697153+0000'}}\n",
-      "Times: 1\n",
-      "Done\n",
-      "\n",
-      "Running boto3_sns workload: wo-dna_vis-ed-sns\n",
-      "Payload: {'gen_file_name': 'small_sequence.gb', 'metadata': {'workload_name': 'wo-dna_vis-ed-direct', 'experiment_type': 'boto3_direct', 'request_id': 'cd442502-e863-4981-9764-7c2bcec13055', 'start_time': '2024-03-29 04:36:13,289024+0000'}}\n",
-      "Times: 1\n",
-      "Done\n",
-      "\n",
-      "Running multi_x workload: wo-dna_vis-ed-multi_x-0.0.3\n",
-      "Payload: {'gen_file_name': 'small_sequence.gb', 'metadata': {'workload_name': 'wo-dna_vis-ed-sns', 'experiment_type': 'boto3_sns', 'request_id': '49140830-bbdd-4dfd-86d2-217eb86596a5', 'start_time': '2024-03-29 04:36:14,204463+0000'}}\n",
-      "Times: 1\n",
+      "Run 1/5 Batch 1/5\n",
       "Sending to home region: False, time_key: N/A\n",
-      "Done\n",
-      "\n",
-      "Run 1/1 Batch 2/10\n",
-      "Running aws_step_function workload: wo-dna_vis-ed-step_function\n",
-      "Payload: {'gen_file_name': 'small_sequence.gb', 'metadata': {'workload_name': 'wo-dna_vis-ed-multi_x-0.0.3', 'experiment_type': 'multi_x', 'request_id': 'cca3ea17-50a7-4f18-9d40-d973c4a911d5', 'start_time': '2024-03-29 04:36:14,797170+0000'}}\n",
-      "Times: 1\n",
-      "Done\n",
-      "\n",
-      "Running boto3_direct workload: wo-dna_vis-ed-direct\n",
-      "Payload: {'gen_file_name': 'small_sequence.gb', 'metadata': {'workload_name': 'wo-dna_vis-ed-step_function', 'experiment_type': 'aws_step_function', 'request_id': 'dadfd686-42dd-487e-8487-d462a80a423d', 'start_time': '2024-03-29 04:38:24,743331+0000'}}\n",
-      "Times: 1\n",
-      "Done\n",
-      "\n",
-      "Running boto3_sns workload: wo-dna_vis-ed-sns\n",
-      "Payload: {'gen_file_name': 'small_sequence.gb', 'metadata': {'workload_name': 'wo-dna_vis-ed-direct', 'experiment_type': 'boto3_direct', 'request_id': '52d134f8-6b65-49bc-97b3-a239a9f6ca29', 'start_time': '2024-03-29 04:38:25,344660+0000'}}\n",
-      "Times: 1\n",
-      "Done\n",
-      "\n",
-      "Running multi_x workload: wo-dna_vis-ed-multi_x-0.0.3\n",
-      "Payload: {'gen_file_name': 'small_sequence.gb', 'metadata': {'workload_name': 'wo-dna_vis-ed-sns', 'experiment_type': 'boto3_sns', 'request_id': 'ea3fb001-41b7-45eb-9968-f0b85fe123e4', 'start_time': '2024-03-29 04:38:26,291776+0000'}}\n",
-      "Times: 1\n",
-      "Sending to home region: False, time_key: N/A\n",
-      "Done\n",
-      "\n",
-      "Run 1/1 Batch 3/10\n",
-      "Running aws_step_function workload: wo-dna_vis-ed-step_function\n",
-      "Payload: {'gen_file_name': 'small_sequence.gb', 'metadata': {'workload_name': 'wo-dna_vis-ed-multi_x-0.0.3', 'experiment_type': 'multi_x', 'request_id': 'd9a0e6bf-18f7-4f94-9611-375328c987d9', 'start_time': '2024-03-29 04:38:26,881367+0000'}}\n",
-      "Times: 1\n",
-      "Done\n",
-      "\n",
-      "Running boto3_direct workload: wo-dna_vis-ed-direct\n",
-      "Payload: {'gen_file_name': 'small_sequence.gb', 'metadata': {'workload_name': 'wo-dna_vis-ed-step_function', 'experiment_type': 'aws_step_function', 'request_id': 'c654aae8-3505-405c-96f2-e9c3030a4f0f', 'start_time': '2024-03-29 04:40:38,026101+0000'}}\n",
-      "Times: 1\n",
-      "Done\n",
-      "\n",
-      "Running boto3_sns workload: wo-dna_vis-ed-sns\n",
-      "Payload: {'gen_file_name': 'small_sequence.gb', 'metadata': {'workload_name': 'wo-dna_vis-ed-direct', 'experiment_type': 'boto3_direct', 'request_id': 'af131772-82bb-4b07-9056-0fef5152c0ac', 'start_time': '2024-03-29 04:40:38,623511+0000'}}\n",
-      "Times: 1\n",
-      "Done\n",
-      "\n",
-      "Running multi_x workload: wo-dna_vis-ed-multi_x-0.0.3\n",
-      "Payload: {'gen_file_name': 'small_sequence.gb', 'metadata': {'workload_name': 'wo-dna_vis-ed-sns', 'experiment_type': 'boto3_sns', 'request_id': '54452dc8-c978-48c6-a1db-36135c6c5632', 'start_time': '2024-03-29 04:40:39,536149+0000'}}\n",
-      "Times: 1\n",
-      "Sending to home region: False, time_key: N/A\n",
-      "Done\n",
-      "\n",
-      "Run 1/1 Batch 4/10\n",
-      "Running aws_step_function workload: wo-dna_vis-ed-step_function\n",
-      "Payload: {'gen_file_name': 'small_sequence.gb', 'metadata': {'workload_name': 'wo-dna_vis-ed-multi_x-0.0.3', 'experiment_type': 'multi_x', 'request_id': '7f3c291b-6c65-46e3-ab27-ce79218dd9cc', 'start_time': '2024-03-29 04:40:40,117670+0000'}}\n",
-      "Times: 1\n",
-      "Done\n",
-      "\n",
-      "Running boto3_direct workload: wo-dna_vis-ed-direct\n",
-      "Payload: {'gen_file_name': 'small_sequence.gb', 'metadata': {'workload_name': 'wo-dna_vis-ed-step_function', 'experiment_type': 'aws_step_function', 'request_id': 'bc3d335a-777f-4ed2-a38b-ef2e0f2b5a90', 'start_time': '2024-03-29 04:42:51,506552+0000'}}\n",
-      "Times: 1\n",
-      "Done\n",
-      "\n",
-      "Running boto3_sns workload: wo-dna_vis-ed-sns\n",
-      "Payload: {'gen_file_name': 'small_sequence.gb', 'metadata': {'workload_name': 'wo-dna_vis-ed-direct', 'experiment_type': 'boto3_direct', 'request_id': '203d7762-3216-4c78-967a-5b43398362b9', 'start_time': '2024-03-29 04:42:52,155253+0000'}}\n",
-      "Times: 1\n",
-      "Done\n",
-      "\n",
-      "Running multi_x workload: wo-dna_vis-ed-multi_x-0.0.3\n",
-      "Payload: {'gen_file_name': 'small_sequence.gb', 'metadata': {'workload_name': 'wo-dna_vis-ed-sns', 'experiment_type': 'boto3_sns', 'request_id': 'c6ab3e02-3634-4664-9856-8c2d088acac3', 'start_time': '2024-03-29 04:42:53,247918+0000'}}\n",
-      "Times: 1\n",
-      "Sending to home region: False, time_key: N/A\n",
-      "Done\n",
-      "\n",
-      "Run 1/1 Batch 5/10\n",
-      "Running aws_step_function workload: wo-dna_vis-ed-step_function\n",
-      "Payload: {'gen_file_name': 'small_sequence.gb', 'metadata': {'workload_name': 'wo-dna_vis-ed-multi_x-0.0.3', 'experiment_type': 'multi_x', 'request_id': 'fcc2a5da-8a8b-420d-a034-2dc47558766e', 'start_time': '2024-03-29 04:42:53,882418+0000'}}\n",
-      "Times: 1\n",
-      "Done\n",
-      "\n",
-      "Running boto3_direct workload: wo-dna_vis-ed-direct\n",
-      "Payload: {'gen_file_name': 'small_sequence.gb', 'metadata': {'workload_name': 'wo-dna_vis-ed-step_function', 'experiment_type': 'aws_step_function', 'request_id': 'afc39c90-3eeb-43b7-9b1c-34413196af23', 'start_time': '2024-03-29 04:45:05,086926+0000'}}\n",
-      "Times: 1\n",
-      "Done\n",
-      "\n",
-      "Running boto3_sns workload: wo-dna_vis-ed-sns\n",
-      "Payload: {'gen_file_name': 'small_sequence.gb', 'metadata': {'workload_name': 'wo-dna_vis-ed-direct', 'experiment_type': 'boto3_direct', 'request_id': 'a705449f-f4e1-4087-ba43-bf65edde86f9', 'start_time': '2024-03-29 04:45:05,760740+0000'}}\n",
-      "Times: 1\n",
-      "Done\n",
-      "\n",
-      "Running multi_x workload: wo-dna_vis-ed-multi_x-0.0.3\n",
-      "Payload: {'gen_file_name': 'small_sequence.gb', 'metadata': {'workload_name': 'wo-dna_vis-ed-sns', 'experiment_type': 'boto3_sns', 'request_id': '777c14bb-dabe-4b12-9a89-fd286b28274e', 'start_time': '2024-03-29 04:45:06,780243+0000'}}\n",
-      "Times: 1\n",
-      "Sending to home region: False, time_key: N/A\n",
-      "Done\n",
-      "\n",
-      "Run 1/1 Batch 6/10\n",
-      "Running aws_step_function workload: wo-dna_vis-ed-step_function\n",
-      "Payload: {'gen_file_name': 'small_sequence.gb', 'metadata': {'workload_name': 'wo-dna_vis-ed-multi_x-0.0.3', 'experiment_type': 'multi_x', 'request_id': 'f7e5bda2-e4ed-4279-bdfa-eb08105a86e3', 'start_time': '2024-03-29 04:45:07,365769+0000'}}\n",
-      "Times: 1\n",
-      "Done\n",
-      "\n",
-      "Running boto3_direct workload: wo-dna_vis-ed-direct\n",
-      "Payload: {'gen_file_name': 'small_sequence.gb', 'metadata': {'workload_name': 'wo-dna_vis-ed-step_function', 'experiment_type': 'aws_step_function', 'request_id': '03401415-d56d-418c-9005-117222b42165', 'start_time': '2024-03-29 04:47:17,163078+0000'}}\n",
-      "Times: 1\n",
-      "Done\n",
-      "\n",
-      "Running boto3_sns workload: wo-dna_vis-ed-sns\n",
-      "Payload: {'gen_file_name': 'small_sequence.gb', 'metadata': {'workload_name': 'wo-dna_vis-ed-direct', 'experiment_type': 'boto3_direct', 'request_id': 'fd700b10-02c0-41fd-b733-3a7b6f3f46b4', 'start_time': '2024-03-29 04:47:17,809341+0000'}}\n",
-      "Times: 1\n",
-      "Done\n",
-      "\n",
-      "Running multi_x workload: wo-dna_vis-ed-multi_x-0.0.3\n",
-      "Payload: {'gen_file_name': 'small_sequence.gb', 'metadata': {'workload_name': 'wo-dna_vis-ed-sns', 'experiment_type': 'boto3_sns', 'request_id': '1e642da0-f677-4d03-b83d-bbee04b3c789', 'start_time': '2024-03-29 04:47:18,837303+0000'}}\n",
-      "Times: 1\n",
-      "Sending to home region: False, time_key: N/A\n",
-      "Done\n",
-      "\n",
-      "Run 1/1 Batch 7/10\n",
-      "Running aws_step_function workload: wo-dna_vis-ed-step_function\n",
-      "Payload: {'gen_file_name': 'small_sequence.gb', 'metadata': {'workload_name': 'wo-dna_vis-ed-multi_x-0.0.3', 'experiment_type': 'multi_x', 'request_id': '25b71dd3-49e1-4eff-be1b-e0ed59db0fe4', 'start_time': '2024-03-29 04:47:19,435258+0000'}}\n",
-      "Times: 1\n",
-      "Done\n",
-      "\n",
-      "Running boto3_direct workload: wo-dna_vis-ed-direct\n",
-      "Payload: {'gen_file_name': 'small_sequence.gb', 'metadata': {'workload_name': 'wo-dna_vis-ed-step_function', 'experiment_type': 'aws_step_function', 'request_id': 'b69ca8ca-dd78-48b3-8b3c-04caed4981ad', 'start_time': '2024-03-29 04:49:30,595720+0000'}}\n",
-      "Times: 1\n",
-      "Done\n",
-      "\n",
-      "Running boto3_sns workload: wo-dna_vis-ed-sns\n",
-      "Payload: {'gen_file_name': 'small_sequence.gb', 'metadata': {'workload_name': 'wo-dna_vis-ed-direct', 'experiment_type': 'boto3_direct', 'request_id': 'ee96264d-3622-4c8c-a39e-63c3f8512a2e', 'start_time': '2024-03-29 04:49:31,191489+0000'}}\n",
-      "Times: 1\n",
-      "Done\n",
-      "\n",
-      "Running multi_x workload: wo-dna_vis-ed-multi_x-0.0.3\n",
-      "Payload: {'gen_file_name': 'small_sequence.gb', 'metadata': {'workload_name': 'wo-dna_vis-ed-sns', 'experiment_type': 'boto3_sns', 'request_id': '930ace87-a244-4ede-9944-eb1f2b3f5709', 'start_time': '2024-03-29 04:49:32,278945+0000'}}\n",
-      "Times: 1\n",
-      "Sending to home region: False, time_key: N/A\n",
-      "Done\n",
-      "\n",
-      "Run 1/1 Batch 8/10\n",
-      "Running aws_step_function workload: wo-dna_vis-ed-step_function\n",
-      "Payload: {'gen_file_name': 'small_sequence.gb', 'metadata': {'workload_name': 'wo-dna_vis-ed-multi_x-0.0.3', 'experiment_type': 'multi_x', 'request_id': 'aa0d6089-89e7-49b2-ace1-90e48905452d', 'start_time': '2024-03-29 04:49:32,880623+0000'}}\n",
-      "Times: 1\n",
-      "Done\n",
-      "\n",
-      "Running boto3_direct workload: wo-dna_vis-ed-direct\n",
-      "Payload: {'gen_file_name': 'small_sequence.gb', 'metadata': {'workload_name': 'wo-dna_vis-ed-step_function', 'experiment_type': 'aws_step_function', 'request_id': 'b357262d-2139-41fa-9726-6b440584f0ec', 'start_time': '2024-03-29 04:51:44,285488+0000'}}\n",
-      "Times: 1\n",
-      "Done\n",
-      "\n",
-      "Running boto3_sns workload: wo-dna_vis-ed-sns\n",
-      "Payload: {'gen_file_name': 'small_sequence.gb', 'metadata': {'workload_name': 'wo-dna_vis-ed-direct', 'experiment_type': 'boto3_direct', 'request_id': '886aac41-0d2e-4c44-8b37-51ab88238564', 'start_time': '2024-03-29 04:51:44,883974+0000'}}\n",
-      "Times: 1\n",
-      "Done\n",
-      "\n",
-      "Running multi_x workload: wo-dna_vis-ed-multi_x-0.0.3\n",
-      "Payload: {'gen_file_name': 'small_sequence.gb', 'metadata': {'workload_name': 'wo-dna_vis-ed-sns', 'experiment_type': 'boto3_sns', 'request_id': 'd8c2124f-bcae-4543-a882-dbb0211dae78', 'start_time': '2024-03-29 04:51:45,951406+0000'}}\n",
-      "Times: 1\n",
+      "Run 2/5 Batch 1/5\n",
       "Sending to home region: True, time_key: N/A\n",
-      "Done\n",
-      "\n",
-      "Run 1/1 Batch 9/10\n",
-      "Running aws_step_function workload: wo-dna_vis-ed-step_function\n",
-      "Payload: {'gen_file_name': 'small_sequence.gb', 'metadata': {'workload_name': 'wo-dna_vis-ed-multi_x-0.0.3', 'experiment_type': 'multi_x', 'request_id': 'f5bbdfab-770c-41a0-aece-8f01064ee8ed', 'start_time': '2024-03-29 04:51:46,577376+0000'}}\n",
-      "Times: 1\n",
-      "Done\n",
-      "\n",
-      "Running boto3_direct workload: wo-dna_vis-ed-direct\n",
-      "Payload: {'gen_file_name': 'small_sequence.gb', 'metadata': {'workload_name': 'wo-dna_vis-ed-step_function', 'experiment_type': 'aws_step_function', 'request_id': 'd5f91718-1d84-4b63-b162-9b519c02df40', 'start_time': '2024-03-29 04:53:56,184331+0000'}}\n",
-      "Times: 1\n",
-      "Done\n",
-      "\n",
-      "Running boto3_sns workload: wo-dna_vis-ed-sns\n",
-      "Payload: {'gen_file_name': 'small_sequence.gb', 'metadata': {'workload_name': 'wo-dna_vis-ed-direct', 'experiment_type': 'boto3_direct', 'request_id': '7518f2fe-36bd-4dc1-9741-03933e19c85e', 'start_time': '2024-03-29 04:53:56,785125+0000'}}\n",
-      "Times: 1\n",
-      "Done\n",
-      "\n",
-      "Running multi_x workload: wo-dna_vis-ed-multi_x-0.0.3\n",
-      "Payload: {'gen_file_name': 'small_sequence.gb', 'metadata': {'workload_name': 'wo-dna_vis-ed-sns', 'experiment_type': 'boto3_sns', 'request_id': '14ef0a86-34bd-4537-8c53-af7676640b9c', 'start_time': '2024-03-29 04:53:57,874380+0000'}}\n",
-      "Times: 1\n",
+      "Run 3/5 Batch 1/5\n",
       "Sending to home region: False, time_key: N/A\n",
-      "Done\n",
-      "\n",
-      "Run 1/1 Batch 10/10\n",
-      "Running aws_step_function workload: wo-dna_vis-ed-step_function\n",
-      "Payload: {'gen_file_name': 'small_sequence.gb', 'metadata': {'workload_name': 'wo-dna_vis-ed-multi_x-0.0.3', 'experiment_type': 'multi_x', 'request_id': '446bd42d-16b2-44bf-b2fb-c2cfab5519d6', 'start_time': '2024-03-29 04:53:58,478074+0000'}}\n",
-      "Times: 1\n",
-      "Done\n",
-      "\n",
-      "Running boto3_direct workload: wo-dna_vis-ed-direct\n",
-      "Payload: {'gen_file_name': 'small_sequence.gb', 'metadata': {'workload_name': 'wo-dna_vis-ed-step_function', 'experiment_type': 'aws_step_function', 'request_id': '3fd8ca35-cadc-4259-a814-6616b61b5de2', 'start_time': '2024-03-29 04:56:09,674608+0000'}}\n",
-      "Times: 1\n",
-      "Done\n",
-      "\n",
-      "Running boto3_sns workload: wo-dna_vis-ed-sns\n",
-      "Payload: {'gen_file_name': 'small_sequence.gb', 'metadata': {'workload_name': 'wo-dna_vis-ed-direct', 'experiment_type': 'boto3_direct', 'request_id': 'c552d0c3-d09e-4576-8d7b-74503e9c11f8', 'start_time': '2024-03-29 04:56:10,272564+0000'}}\n",
-      "Times: 1\n",
-      "Done\n",
-      "\n",
-      "Running multi_x workload: wo-dna_vis-ed-multi_x-0.0.3\n",
-      "Payload: {'gen_file_name': 'small_sequence.gb', 'metadata': {'workload_name': 'wo-dna_vis-ed-sns', 'experiment_type': 'boto3_sns', 'request_id': '9c1b4631-cb4b-4d57-80c5-71c796c6e926', 'start_time': '2024-03-29 04:56:11,220087+0000'}}\n",
-      "Times: 1\n",
+      "Run 4/5 Batch 1/5\n",
       "Sending to home region: False, time_key: N/A\n",
-      "Done\n",
-      "\n"
+      "Run 5/5 Batch 1/5\n",
+      "Sending to home region: False, time_key: N/A\n",
+      "Run 1/5 Batch 2/5\n",
+      "Sending to home region: False, time_key: N/A\n",
+      "Run 2/5 Batch 2/5\n",
+      "Sending to home region: False, time_key: N/A\n",
+      "Run 3/5 Batch 2/5\n",
+      "Sending to home region: False, time_key: N/A\n",
+      "Run 4/5 Batch 2/5\n",
+      "Sending to home region: False, time_key: N/A\n",
+      "Run 5/5 Batch 2/5\n",
+      "Sending to home region: False, time_key: N/A\n",
+      "Run 1/5 Batch 3/5\n",
+      "Sending to home region: False, time_key: N/A\n",
+      "Run 2/5 Batch 3/5\n",
+      "Sending to home region: False, time_key: N/A\n",
+      "Run 3/5 Batch 3/5\n",
+      "Sending to home region: False, time_key: N/A\n",
+      "Run 4/5 Batch 3/5\n",
+      "Sending to home region: False, time_key: N/A\n",
+      "Run 5/5 Batch 3/5\n",
+      "Sending to home region: False, time_key: N/A\n",
+      "Run 1/5 Batch 4/5\n",
+      "Sending to home region: False, time_key: N/A\n",
+      "Run 2/5 Batch 4/5\n",
+      "Sending to home region: False, time_key: N/A\n",
+      "Run 3/5 Batch 4/5\n",
+      "Sending to home region: False, time_key: N/A\n",
+      "Run 4/5 Batch 4/5\n",
+      "Sending to home region: False, time_key: N/A\n",
+      "Run 5/5 Batch 4/5\n",
+      "Sending to home region: False, time_key: N/A\n",
+      "Run 1/5 Batch 5/5\n",
+      "Sending to home region: False, time_key: N/A\n",
+      "Run 2/5 Batch 5/5\n",
+      "Sending to home region: False, time_key: N/A\n",
+      "Run 3/5 Batch 5/5\n",
+      "Sending to home region: False, time_key: N/A\n",
+      "Run 4/5 Batch 5/5\n",
+      "Sending to home region: False, time_key: N/A\n",
+      "Run 5/5 Batch 5/5\n",
+      "Sending to home region: False, time_key: N/A\n"
      ]
     }
    ],
@@ -306,14 +136,14 @@
     "    \"gen_file_name\": \"small_sequence.gb\"\n",
     "}\n",
     "\n",
-    "sleep_time = 130\n",
-    "times = 1\n",
+    "sleep_time = 100\n",
     "# batchs = 10\n",
-    "batchs = 1\n",
+    "batchs = 5\n",
+    "batch_sizes = 5\n",
     "for batch in range(batchs):\n",
-    "    for run in range(times):\n",
+    "    for run in range(batch_sizes):\n",
     "        # Log the run\n",
-    "        print(f\"Run {run + 1}/{times} Batch {batch + 1}/{batchs}\")\n",
+    "        print(f\"Run {run + 1}/{batch_sizes} Batch {batch + 1}/{batchs}\")\n",
     "\n",
     "        # AWS Step Function\n",
     "        aws_step_functions_dir = \"./dna_visualization/external_database/aws_step_function\" # AWS Step Functions\n",
@@ -461,13 +291,12 @@
     "}\n",
     "\n",
     "sleep_time = 20\n",
-    "times = 10\n",
-    "# batchs = 10\n",
     "batchs = 5\n",
+    "batch_sizes = 10\n",
     "for batch in range(batchs):\n",
-    "    for run in range(times):\n",
+    "    for run in range(batch_sizes):\n",
     "        # Log the run\n",
-    "        print(f\"Run {run + 1}/{times} Batch {batch + 1}/{batchs}\")\n",
+    "        print(f\"Run {run + 1}/{batch_sizes} Batch {batch + 1}/{batchs}\")\n",
     "\n",
     "        # AWS Step Function\n",
     "        aws_step_functions_dir = \"./image_processing/external_database/aws_step_function\" # AWS Step Functions\n",
