New step function for overhead examination

--- a/benchmarks/experiments/wrapper_overhead/run.ipynb
+++ b/benchmarks/experiments/wrapper_overhead/run.ipynb
@@ -170,17 +170,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Sending to home region: False, time_key: N/A\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "payload = {\n",
     "    \"message\": \"input/globe_rotating.mp4\"\n",
@@ -190,6 +182,13 @@
     "# direct_calls_dir = \"./video_analytics/external_database/boto3_direct\" # Boto3 only direct calls\n",
     "# run_utility.run_experiment(direct_calls_dir, payload, 1, 0.5, False)\n",
     "\n",
+    "# # SNS\n",
+    "# sns_calls_dir = \"./video_analytics/external_database/boto3_sns\" # Boto3 only sns calls\n",
+    "# run_utility.run_experiment(sns_calls_dir, payload, 1, 0.5, False)\n",
+    "\n",
+    "# # AWS Step Function\n",
+    "# aws_step_functions_dir = \"./video_analytics/external_database/aws_step_function\" # AWS Step Functions\n",
+    "# run_utility.run_experiment(aws_step_functions_dir, payload, 1, 0.5, False)\n",
     "\n",
     "# # Multi-X\n",
     "# multi_x_dir = \"./video_analytics/external_database/multi_x\" # Multi_x\n",
