--- a/benchmarks/experiments/wrapper_overhead/run.ipynb
+++ b/benchmarks/experiments/wrapper_overhead/run.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,11 +121,118 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Run 1/5 Batch 1/10\n",
+      "Sending to home region: False, time_key: N/A\n",
+      "Run 2/5 Batch 1/10\n",
+      "Sending to home region: False, time_key: N/A\n",
+      "Run 3/5 Batch 1/10\n",
+      "Sending to home region: False, time_key: N/A\n",
+      "Run 4/5 Batch 1/10\n",
+      "Sending to home region: True, time_key: N/A\n",
+      "Run 5/5 Batch 1/10\n",
+      "Sending to home region: False, time_key: N/A\n",
+      "Run 1/5 Batch 2/10\n",
+      "Sending to home region: False, time_key: N/A\n",
+      "Run 2/5 Batch 2/10\n",
+      "Sending to home region: False, time_key: N/A\n",
+      "Run 3/5 Batch 2/10\n",
+      "Sending to home region: False, time_key: N/A\n",
+      "Run 4/5 Batch 2/10\n",
+      "Sending to home region: False, time_key: N/A\n",
+      "Run 5/5 Batch 2/10\n",
+      "Sending to home region: False, time_key: N/A\n",
+      "Run 1/5 Batch 3/10\n",
+      "Sending to home region: False, time_key: N/A\n",
+      "Run 2/5 Batch 3/10\n",
+      "Sending to home region: False, time_key: N/A\n",
+      "Run 3/5 Batch 3/10\n",
+      "Sending to home region: False, time_key: N/A\n",
+      "Run 4/5 Batch 3/10\n",
+      "Sending to home region: False, time_key: N/A\n",
+      "Run 5/5 Batch 3/10\n",
+      "Sending to home region: False, time_key: N/A\n",
+      "Run 1/5 Batch 4/10\n",
+      "Sending to home region: False, time_key: N/A\n",
+      "Run 2/5 Batch 4/10\n",
+      "Sending to home region: False, time_key: N/A\n",
+      "Run 3/5 Batch 4/10\n",
+      "Sending to home region: False, time_key: N/A\n",
+      "Run 4/5 Batch 4/10\n",
+      "Sending to home region: False, time_key: N/A\n",
+      "Run 5/5 Batch 4/10\n",
+      "Sending to home region: False, time_key: N/A\n",
+      "Run 1/5 Batch 5/10\n",
+      "Sending to home region: False, time_key: N/A\n",
+      "Run 2/5 Batch 5/10\n",
+      "Sending to home region: False, time_key: N/A\n",
+      "Run 3/5 Batch 5/10\n",
+      "Sending to home region: False, time_key: N/A\n",
+      "Run 4/5 Batch 5/10\n",
+      "Sending to home region: False, time_key: N/A\n",
+      "Run 5/5 Batch 5/10\n",
+      "Sending to home region: False, time_key: N/A\n",
+      "Run 1/5 Batch 6/10\n",
+      "Sending to home region: False, time_key: N/A\n",
+      "Run 2/5 Batch 6/10\n",
+      "Sending to home region: False, time_key: N/A\n",
+      "Run 3/5 Batch 6/10\n",
+      "Sending to home region: False, time_key: N/A\n",
+      "Run 4/5 Batch 6/10\n",
+      "Sending to home region: False, time_key: N/A\n",
+      "Run 5/5 Batch 6/10\n",
+      "Sending to home region: False, time_key: N/A\n",
+      "Run 1/5 Batch 7/10\n",
+      "Sending to home region: False, time_key: N/A\n",
+      "Run 2/5 Batch 7/10\n",
+      "Sending to home region: False, time_key: N/A\n",
+      "Run 3/5 Batch 7/10\n",
+      "Sending to home region: True, time_key: N/A\n",
+      "Run 4/5 Batch 7/10\n",
+      "Sending to home region: False, time_key: N/A\n",
+      "Run 5/5 Batch 7/10\n",
+      "Sending to home region: False, time_key: N/A\n",
+      "Run 1/5 Batch 8/10\n",
+      "Sending to home region: False, time_key: N/A\n",
+      "Run 2/5 Batch 8/10\n",
+      "Sending to home region: False, time_key: N/A\n",
+      "Run 3/5 Batch 8/10\n",
+      "Sending to home region: False, time_key: N/A\n",
+      "Run 4/5 Batch 8/10\n",
+      "Sending to home region: False, time_key: N/A\n",
+      "Run 5/5 Batch 8/10\n",
+      "Sending to home region: False, time_key: N/A\n",
+      "Run 1/5 Batch 9/10\n",
+      "Sending to home region: False, time_key: N/A\n",
+      "Run 2/5 Batch 9/10\n",
+      "Sending to home region: False, time_key: N/A\n",
+      "Run 3/5 Batch 9/10\n",
+      "Sending to home region: False, time_key: N/A\n",
+      "Run 4/5 Batch 9/10\n",
+      "Sending to home region: False, time_key: N/A\n",
+      "Run 5/5 Batch 9/10\n",
+      "Sending to home region: True, time_key: N/A\n",
+      "Run 1/5 Batch 10/10\n",
+      "Sending to home region: False, time_key: N/A\n",
+      "Run 2/5 Batch 10/10\n",
+      "Sending to home region: False, time_key: N/A\n",
+      "Run 3/5 Batch 10/10\n",
+      "Sending to home region: False, time_key: N/A\n",
+      "Run 4/5 Batch 10/10\n",
+      "Sending to home region: False, time_key: N/A\n",
+      "Run 5/5 Batch 10/10\n",
+      "Sending to home region: False, time_key: N/A\n"
+     ]
+    }
+   ],
    "source": [
-    "enable_image_processing = False\n",
+    "enable_image_processing = True\n",
     "\n",
     "if enable_image_processing:\n",
     "    payload = {\n",
@@ -133,8 +240,8 @@
     "    }\n",
     "\n",
     "    sleep_time = 20\n",
-    "    batchs = 5\n",
-    "    batch_sizes = 10\n",
+    "    batchs = 10\n",
+    "    batch_sizes = 5\n",
     "    for batch in range(batchs):\n",
     "        for run in range(batch_sizes):\n",
     "            # Log the run\n",
@@ -170,15 +277,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sending to home region: False, time_key: N/A\n"
+     ]
+    }
+   ],
    "source": [
     "payload = {\n",
     "    \"message\": \"input/globe_rotating.mp4\"\n",
     "}\n",
     "\n",
-    "# Direct\n",
+    "# # Direct\n",
     "# direct_calls_dir = \"./video_analytics/external_database/boto3_direct\" # Boto3 only direct calls\n",
     "# run_utility.run_experiment(direct_calls_dir, payload, 1, 0.5, False)\n",
     "\n",
@@ -190,9 +305,71 @@
     "# aws_step_functions_dir = \"./video_analytics/external_database/aws_step_function\" # AWS Step Functions\n",
     "# run_utility.run_experiment(aws_step_functions_dir, payload, 1, 0.5, False)\n",
     "\n",
-    "# # Multi-X\n",
-    "# multi_x_dir = \"./video_analytics/external_database/multi_x\" # Multi_x\n",
-    "# run_utility.run_experiment(multi_x_dir, payload, 1, 0.5, False)"
+    "# Multi-X\n",
+    "multi_x_dir = \"./video_analytics/external_database/multi_x\" # Multi_x\n",
+    "run_utility.run_experiment(multi_x_dir, payload, 1, 0.5, False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Run 1/1 Batch 1/5\n",
+      "Sending to home region: False, time_key: N/A\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[22], line 34\u001b[0m\n\u001b[1;32m     20\u001b[0m     \u001b[38;5;66;03m# # AWS Step Function\u001b[39;00m\n\u001b[1;32m     21\u001b[0m     \u001b[38;5;66;03m# aws_step_functions_dir = \"./video_analytics/external_database/aws_step_function\" # AWS Step Functions\u001b[39;00m\n\u001b[1;32m     22\u001b[0m     \u001b[38;5;66;03m# run_utility.run_experiment(aws_step_functions_dir, payload, 1, 0.5, False)\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     31\u001b[0m \n\u001b[1;32m     32\u001b[0m \u001b[38;5;66;03m# Sleep for some time IF it is not the last batch\u001b[39;00m\n\u001b[1;32m     33\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m batch \u001b[38;5;241m!=\u001b[39m batchs \u001b[38;5;241m-\u001b[39m \u001b[38;5;241m1\u001b[39m:\n\u001b[0;32m---> 34\u001b[0m     \u001b[43mtime\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msleep\u001b[49m\u001b[43m(\u001b[49m\u001b[43msleep_time\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
+   "source": [
+    "enable_video_analytics = True\n",
+    "\n",
+    "if enable_video_analytics:\n",
+    "    payload = {\n",
+    "        \"message\": \"input/globe_rotating.mp4\"\n",
+    "    }\n",
+    "\n",
+    "    sleep_time = 21\n",
+    "    batchs = 5\n",
+    "    batch_sizes = 1\n",
+    "    for batch in range(batchs):\n",
+    "        for run in range(batch_sizes):\n",
+    "            # Log the run\n",
+    "            print(f\"Run {run + 1}/{batch_sizes} Batch {batch + 1}/{batchs}\")\n",
+    "\n",
+    "            # Multi-X\n",
+    "            multi_x_dir = \"./video_analytics/external_database/multi_x\" # Multi_x\n",
+    "            run_utility.run_experiment(multi_x_dir, payload, 1, 0.5, False)\n",
+    "\n",
+    "            # # AWS Step Function\n",
+    "            # aws_step_functions_dir = \"./video_analytics/external_database/aws_step_function\" # AWS Step Functions\n",
+    "            # run_utility.run_experiment(aws_step_functions_dir, payload, 1, 0.5, False)\n",
+    "\n",
+    "            # # Direct\n",
+    "            # direct_calls_dir = \"./video_analytics/external_database/boto3_direct\" # Boto3 only direct calls\n",
+    "            # run_utility.run_experiment(direct_calls_dir, payload, 1, 0.5, False)\n",
+    "\n",
+    "            # # SNS\n",
+    "            # sns_calls_dir = \"./video_analytics/external_database/boto3_sns\" # Boto3 only sns calls\n",
+    "            # run_utility.run_experiment(sns_calls_dir, payload, 1, 0.5, False) \n",
+    "\n",
+    "        # Sleep for some time IF it is not the last batch\n",
+    "        if batch != batchs - 1:\n",
+    "            time.sleep(sleep_time)"
    ]
   }
  ],
